--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(buckshot_roulette_expectiminmax)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(buckshot_roulette_expectiminmax main.cpp
-        GameState.cpp
-        GameState.hpp
-        Enums.hpp
+add_executable(buckshot_roulette_expectiminmax src/main.cpp
+        src/GameState.cpp
+        src/GameState.hpp
+        src/Enums.hpp
 )
