Adds googletest framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,12 @@ project(buckshot_roulette_expectiminmax)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include(CTest)
+enable_testing()
+IF(BUILD_TESTING)
+    add_subdirectory(tests)
+endif()
+
 add_executable(buckshot_roulette_expectiminmax src/main.cpp
         src/GameState.cpp
         src/GameState.hpp
