--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,5 +7,9 @@ add_subdirectory(extern/googletest)
 
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(buckshot_roulette_expectiminmax_tests_run SimpleTest.cpp)
+add_executable(buckshot_roulette_expectiminmax_tests_run SimpleTest.cpp
+        ../src/GameState.hpp
+        ../src/GameState.cpp
+        ../src/Enums.hpp
+)
 target_link_libraries(buckshot_roulette_expectiminmax_tests_run gtest gtest_main)
